--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1 align="center">Welcome to Car Universe!</h1>
     <br><hr>
     <marquee behavior="" direction="">
-        <img src="/images/defender.png"  width="500px" height="300px">
-        <img src="/images/thar.png"  width="500px" height="300px">
-        <img src="/images/porsche.png"  width="500px" height="300px">
-        <img src="/images/lamborghini_urus.png"  width="500px" height="300px">
+        <img src="images/defender.png"  width="500px" height="300px">
+        <img src="images/thar.png"  width="500px" height="300px">
+        <img src="images/porsche.png"  width="500px" height="300px">
+        <img src="images/lamborghini_urus.png"  width="500px" height="300px">
     </marquee>
     <hr>
     <h2>Latest Car Edition</h2>
-    <img src="/images/range_rover.png"  width="400px" height="500px"><br>
-    <img src="/images/ferrari.png"  width="400px" height="500px">
+    <img src="images/range_rover.png"  width="400px" height="500px"><br>
+    <img src="images/ferrari.png"  width="400px" height="500px">
 </body>
 </html>
