--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Shreyash Home Page</title>
 </head>
 <body>
     <h1 align="center">Welcome to Car Universe!</h1>
