--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Shreyash Home Page</title>
 </head>
 <body>
-    <img src="images/carlogo.png" width="100px" height="100px">
+    <img src="images/carlogo.png" width="100px" height="100px"><br>
     <h1 align="center">Welcome to Car Universe!</h1>
     <br><hr>
     <marquee behavior="" direction="">
