--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Shreyash Home Page</title>
 </head>
 <body>
-    <img src="images/carlogo.png" width="200px" height="200px"><br>
-    <h1 align="center">Welcome to Car Universe!</h1>
+    <img src="images/carlogo.png" width="200px" height="200px">
+    <h1 align="right">Welcome to Car Universe!</h1>
     <br><hr>
     <marquee behavior="" direction="">
         <img src="images/defender.png"  width="500px" height="300px">
