--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="images/carlogo.png" width="200px" height="200px">
-    <h1 align="right">Welcome to Car Universe!</h1>
+    <h1>Welcome to Car Universe!</h1>
     <br><hr>
     <marquee behavior="" direction="">
         <img src="images/defender.png"  width="500px" height="300px">
